glob2dataguidir= $(pkgdatadir)/data/gui
glob2datagui_DATA= editor0.png \
editor10.png \
editor11.png \
editor12.png \
editor13.png \
editor14.png \
editor15.png \
editor16.png \
editor17.png \
editor18.png \
editor19.png \
editor1.png \
editor20.png \
editor21.png \
editor22.png \
editor23.png \
editor24.png \
editor25.png \
editor26.png \
editor27.png \
editor28.png \
editor29.png \
editor2.png \
editor30.png \
editor31.png \
editor32.png \
editor33.png \
editor3.png \
editor4.png \
editor5.png \
editor6.png \
editor7.png \
editor8.png \
editor9.png \
mainmenu0.png \
mainmenu1.png \
mainmenu2.png \
mainmenu3.png \
mainmenu4.png \
mainmenu5.png \
mainmenu6.png \
mplayerchoosemap0.png \
mplayerchoosemap1.png \
mplayerchoosemap2.png \
mplayerchoosemap3.png \
mplayerhost0.png \
mplayerhost1.png \
mplayerhost2.png \
mplayermenu0.png \
mplayermenu1.png \
mplayermenu2.png \
mplayermenu3.png

EXTRA_DIST= editor0.png \
editor10.png \
editor11.png \
editor12.png \
editor13.png \
editor14.png \
editor15.png \
editor16.png \
editor17.png \
editor18.png \
editor19.png \
editor1.png \
editor20.png \
editor21.png \
editor22.png \
editor23.png \
editor24.png \
editor25.png \
editor26.png \
editor27.png \
editor28.png \
editor29.png \
editor2.png \
editor30.png \
editor31.png \
editor32.png \
editor33.png \
editor3.png \
editor4.png \
editor5.png \
editor6.png \
editor7.png \
editor8.png \
editor9.png \
mainmenu0.png \
mainmenu1.png \
mainmenu2.png \
mainmenu3.png \
mainmenu4.png \
mainmenu5.png \
mainmenu6.png \
mplayerchoosemap0.png \
mplayerchoosemap1.png \
mplayerchoosemap2.png \
mplayerchoosemap3.png \
mplayerhost0.png \
mplayerhost1.png \
mplayerhost2.png \
mplayermenu0.png \
mplayermenu1.png \
mplayermenu2.png \
