EXTRA_DIST = glSDL.h \
Toolkit.h \
StringTable.h \
FileManager.h \
Types.h \
Stream.h \
BinaryStream.h \
TextStream.h \
StreamBackend.h \
GAG.h \
GAGSys.h \
GUIBase.h \
GUIButton.h \
GUIList.h \
GUIFileList.h\
GUINumber.h \
GUIRatio.h \
GUIText.h \
GUITextArea.h \
GUITextInput.h \
GUISelector.h \
GUIAnimation.h \
GraphicContext.h \
SDLGraphicContext.h \
CursorManager.h \
SupportFunctions.h \
GUIMessageBox.h 
