EXTRA_DIST = Toolkit.h \
StringTable.h \
FileManager.h \
Types.h \
Stream.h \
BinaryStream.h \
TextStream.h \
StreamBackend.h \
StreamFilter.h \
GAG.h \
GAGSys.h \
GUIBase.h \
GUIButton.h \
GUIList.h \
GUIFileList.h\
GUIKeySelector.h\
GUINumber.h \
GUIRatio.h \
GUIText.h \
GUITextArea.h \
GUITextInput.h \
KeyPress.h \
GUISelector.h \
GUIAnimation.h \
GraphicContext.h \
SDLGraphicContext.h \
CursorManager.h \
SupportFunctions.h \
GUIMessageBox.h \
GUIStyle.h \
FormatableString.h
